# Heart-Sync

./: .gitignore  CHANGES.md  FUTURISTIC_DESIGN_UPDATE.md  GITHUB_SETUP.md  GIT_READY.md  HOSPITAL_GRADE_GRAPHS.md  HeartSyncProfessional.py  LICENSE  MEDICAL_MONITOR_DESIGN.md  NEXTGEN_TRANSFORMATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  UI_FIX_PHASE1_SUMMARY.md  UI_PARITY_SUMMARY.md  UI_UNIFORMITY_UPDATE.md  crash_report2.ips  scan_devices.py  test_ble_scan.py  test_bluetooth_complete.py  test_heartrate.py  theme_tokens.py  theme_tokens_nextgen.py
HeartSyncVST3/: CMakeLists.txt  INSTALL_HELP.bat  README.md  build.bat  build.sh  build_with_buildtools.bat  build_with_msvc.bat  install.bat
HeartSyncVST3/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_Professional.cpp  PluginProcessor_Professional.h
HeartSyncVST3/Source/Core/: BluetoothManager.cpp  BluetoothManager.h  BluetoothManager_Native.mm  HeartRateParams.h  HeartRateProcessor.cpp  HeartRateProcessor.h  HeartSyncBLEClient.cpp  HeartSyncBLEClient.h  OscSenderManager.cpp  OscSenderManager.h
HeartSyncVST3/Source/UI/: HSLookAndFeel.h  HSTheme.h  MetricRow.h  ParamBox.h  ParamToggle.h  WaveGraph.h
HeartSyncVST3/Source/UI/legacy/: HeartSyncLookAndFeel.h  Panel.h  Theme.h  ValueTile.h
HeartSyncVST3/Source/legacy/: PluginEditor_Components.cpp  PluginEditor_Minimal.cpp  PluginEditor_Professional.cpp  PluginEditor_Professional.h  PluginProcessor.cpp  PluginProcessor.h
archive/HeartSync_legacy/: CMakeLists.txt  README.md
archive/HeartSync_legacy/BridgeApp/: HeartSyncBridge.h  HeartSyncBridge.m  Info.plist
archive/HeartSync_legacy/Source/: PluginEditor.cpp.p7backup  PluginEditor.h.p7backup  PluginProcessor.cpp  PluginProcessor.h
archive/HeartSync_legacy/Source/Core/: HeartRateProcessor.cpp  HeartRateProcessor.h  HeartSyncBLE.h  HeartSyncBLE.mm  HeartSyncBLEClient.cpp  HeartSyncBLEClient.cpp.tcp_backup  HeartSyncBLEClient.h
archive/HeartSync_legacy/Source/UI/: HSLookAndFeel.h  HSTheme.h  HeartSyncLookAndFeel.cpp  MetricPanel.cpp  MetricPanel.h  MetricRow.h  Panel.cpp  ParamBox.h  RectPanel.h  Theme.cpp
archive/patches/: heartsync_uds.patch
artifacts/ui/: 3_ROW_IMPLEMENTATION_GUIDE.md  3_ROW_IMPLEMENTATION_SUCCESS.md  P7_PYTHON_PARITY_COMPLETE.md  PLUGIN_CACHE_FIX.md  UI_LAYOUT_DIAGRAM.txt
docs/: setup_guide.md
docs/archive/: CLEANUP_SUMMARY.md  PLUGIN_VERIFICATION_REPORT.md  PluginEditor_Old.cpp  TERMINAL_COMMANDS_EXECUTED.md  cleanup_verification.sh
docs/legacy-20251014-152847/: DELIVERY_COMPLETE.txt  FINAL_DELIVERABLE.md  HEARTSYNC_UDS_PATCH.md  HELPER_REFACTOR_STATUS.md  IMPLEMENTATION_SUMMARY.md  P1_APPLIED.txt  P2_APPLIED.txt  P3_APPLIED.txt  P4_APPLIED.txt  P5a_APPLIED.txt  P5b_APPLIED.txt  P6a_APPLIED.txt  P6b_APPLIED.txt  P6c_APPLIED.txt  PATCH_01_build_system.patch  RISK_LOG.md
scripts/: build_mac.sh
tools/: install_heartsync.sh  uds_send.py
